create new component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<header>
+  <img src="assets/task-management-logo.png" alt="a todo list picture" />
+  <div>
+    <h1>Easy Task Manager</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+      debitis harum tempora quas eius est dolore, suscipit amet, autem id at
+      beatae ea facilis omnis nam voluptas quos eos magnam!
+    </p>
+  </div>
+</header>
