add some new avatars in to the project

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,9 @@
 <div>
   <button>
-    <img src="" alt="" />
-    <span>NAME</span>
+    <img
+      src="assets/users/{{ selectedUser.avatar }}"
+      alt="avatar of the user"
+    />
+    <span>{{ selectedUser.name }}</span>
   </button>
 </div>
