--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div>
   <button>
     <img
-      src="assets/users/{{ selectedUser.avatar }}"
-      alt="avatar of the user"
+      [src]="'assets/users/' + selectedUser.avatar"
+      alt="{{ selectedUser.name }}"
     />
     <span>{{ selectedUser.name }}</span>
   </button>
