--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,6 @@
 <div>
-  <button>
-    <img
-      [src]="'assets/users/' + selectedUser.avatar"
-      alt="{{ selectedUser.name }}"
-    />
+  <button (click)="onSelectUser($event)">
+    <img [src]="imagePath" alt="{{ selectedUser.name }}" />
     <span>{{ selectedUser.name }}</span>
   </button>
 </div>
