--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,8 @@
 <div>
-  <button (click)="onSelectUser($event)">
-    <img [src]="imagePath" alt="{{ selectedUser.name }}" />
-    <span>{{ selectedUser.name }}</span>
+  @for (item of users(); track item.id) {
+  <button (click)="onSelectUser()">
+    <img [src]="imagePath()" alt="{{ item.name }}" />
+    <span>{{ item.name }}</span>
   </button>
+  }
 </div>
