--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button (click)="onSelectUser()">
+  <button (click)="onSelectUser(id())">
     <img [src]="imagePath()" alt="{{ name() }}" />
     <span>{{ name() }}</span>
   </button>
