--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
-  <button (click)="onSelectUser(id())">
-    <img [src]="imagePath()" alt="{{ name() }}" />
-    <span>{{ name() }}</span>
+  <button (click)="onSelectUser(user().id)">
+    <img [src]="imagePath()" alt="{{ user().name }}" />
+    <span>{{ user().name }}</span>
   </button>
 </div>
