add task component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,30 @@
 <app-header />
 <main>
-  <ul id="users">
-    @for (user of users(); track user.id) {
-    <li>
-      <app-user [user]="user" (select)="onSelectUser($event)" />
-    </li>
-    }
-  </ul>
-  <app-tasks [name]="selectedUser().name" />
+   <!-- new version -->
+   <ul id="users">
+      @for (user of users(); track user.id) {
+      <li>
+         <app-user [user]="user" (select)="onSelectUser($event)" />
+      </li>
+      }
+   </ul>
+   <!-- Old Version Of NgFor -->
+   <!-- <ul id="users">
+      <li *ngFor="let user of users()">
+         <app-user [user]="user" (select)="onSelectUser($event)" />
+      </li>
+   </ul> -->
+
+   <!-- new version -->
+   @if (selectedUser().name !== '') {
+   <app-tasks [name]="selectedUser().name" />
+   }@else{
+   <p id="fallback">No user selected</p>
+   }
+
+   <!-- Old Version of ngIf -->
+   <!-- <app-tasks *ngIf="selectedUser().name; else fallback" [name]="selectedUser().name" />
+   <ng-template #fallback>
+      <p id="fallback">No user selected</p>
+   </ng-template> -->
 </main>
