--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,14 @@
-<p>{{ name() }}</p>
+<section id="tasks">
+   <header>
+      <h2>{{ name() }}'s tasks</h2>
+      <menu>
+         <button type="button">Add Task</button>
+      </menu>
+   </header>
+
+   <ul>
+      <li><app-task></app-task></li>
+      <li><app-task></app-task></li>
+      <li><app-task></app-task></li>
+   </ul>
+</section>
