show task in the tasks component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 
    <!-- new version -->
    @if (selectedUser().name !== '') {
-   <app-tasks [name]="selectedUser().name" />
+   <app-tasks [user]="selectedUser()" />
    }@else{
    <p id="fallback">No user selected</p>
    }
