--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
-  <button (click)="onSelectUser(user().id)">
-    <img [src]="imagePath()" alt="{{ user().name }}" />
-    <span>{{ user().name }}</span>
-  </button>
+   <button [class.active]="isSelected()" (click)="onSelectUser(user().id)">
+      <img [src]="imagePath()" alt="{{ user().name }}" />
+      <span>{{ user().name }}</span>
+   </button>
 </div>
