--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -4,22 +4,22 @@
    <form>
       <p>
          <label for="title">Title</label>
-         <input type="text" id="title" name="title" />
+         <input type="text" id="title" name="title" [(ngModel)]="title" />
       </p>
 
       <p>
          <label for="summary">Summary</label>
-         <textarea id="summary" rows="5" name="summary"></textarea>
+         <textarea id="summary" rows="5" name="summary" [(ngModel)]="summary"></textarea>
       </p>
 
       <p>
          <label for="due-date">Due Date</label>
-         <input type="date" id="due-date" name="due-date" />
+         <input type="date" id="due-date" name="dueDate" [(ngModel)]="dueDate" />
       </p>
 
       <p class="actions">
          <button type="button" (click)="closeDialog()">Cancel</button>
-         <button type="submit">Create</button>
+         <button type="submit" (click)="createNewTask()">Create</button>
       </p>
    </form>
 </dialog>
