--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,7 +1,7 @@
 <div class="backdrop" (click)="closeDialog()"></div>
 <dialog open>
    <h2>Add Task</h2>
-   <form>
+   <form (submit)="onSubmit()">
       <p>
          <label for="title">Title</label>
          <input type="text" id="title" name="title" [(ngModel)]="title" />
@@ -19,7 +19,7 @@
 
       <p class="actions">
          <button type="button" (click)="closeDialog()">Cancel</button>
-         <button type="submit" (click)="createNewTask()">Create</button>
+         <button type="submit">Create</button>
       </p>
    </form>
 </dialog>
