add new shared component

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,20 +1,22 @@
 @if (isAddedNewTask()) {
-  <!-- add new task -->
+<!-- add new task -->
 <app-new-task [isOpened]="isAddedNewTask()" (add)="AddNewTask($event)" (onCancelAddTask)="isAddedNewTask.set($event)" />
 }
 
 <!-- show all tasks -->
-<section id="tasks">
-   <header>
-      <h2>{{ user().name }}'s tasks</h2>
-      <menu>
-         <button (click)="isAddedNewTask.set(true)" type="button">Add Task</button>
-      </menu>
-   </header>
+<app-card>
+   <section id="tasks">
+      <header>
+         <h2>{{ user().name }}'s tasks</h2>
+         <menu>
+            <button (click)="isAddedNewTask.set(true)" type="button">Add Task</button>
+         </menu>
+      </header>
 
-   <ul>
-      @for (task of taskOfUser(); track task.id) {
-      <li><app-task [task]="task" (deleteTask)="deleteTask($event)"></app-task></li>
-      }
-   </ul>
-</section>
+      <ul>
+         @for (task of taskOfUser(); track task.id) {
+         <li><app-task [task]="task" (deleteTask)="deleteTask($event)"></app-task></li>
+         }
+      </ul>
+   </section>
+</app-card>
