--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,8 @@
-<div>
-   <button [class.active]="isSelected()" (click)="onSelectUser(user().id)">
-      <img [src]="imagePath()" alt="{{ user().name }}" />
-      <span>{{ user().name }}</span>
-   </button>
-</div>
+<app-card>
+   <div>
+      <button [class.active]="isSelected()" (click)="onSelectUser(user().id)">
+         <img [src]="imagePath()" alt="{{ user().name }}" />
+         <span>{{ user().name }}</span>
+      </button>
+   </div>
+</app-card>
