--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,6 +1,6 @@
-@if (isAddedNewTask()) {
+@if (close()) {
 <!-- add new task -->
-<app-new-task [isOpened]="isAddedNewTask()" (add)="AddNewTask($event)" (onCancelAddTask)="isAddedNewTask.set($event)" />
+<app-new-task [userId]="user().id" (close)="close.set($event)" />
 }
 
 <!-- show all tasks -->
@@ -9,7 +9,7 @@
       <header>
          <h2>{{ user().name }}'s tasks</h2>
          <menu>
-            <button (click)="isAddedNewTask.set(true)" type="button">Add Task</button>
+            <button (click)="close.set(true)" type="button">Add Task</button>
          </menu>
       </header>
 
