refactor remove task in the tasks component

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -15,7 +15,7 @@
 
       <ul>
          @for (task of taskOfUser(); track task.id) {
-         <li><app-task [task]="task" (deleteTask)="deleteTask($event)"></app-task></li>
+         <li><app-task [task]="task"></app-task></li>
          }
       </ul>
    </section>
