--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -5,6 +5,7 @@
 
 <!-- show all tasks -->
 <app-card>
+   @if(taskOfUser().length>0){
    <section id="tasks">
       <header>
          <h2>{{ user().name }}'s tasks</h2>
@@ -19,4 +20,7 @@
          }
       </ul>
    </section>
+   }@else{
+   <div>{{ user().name }} doesn't have any tasks.</div>
+   }
 </app-card>
